k8s/components/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitx-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: splitx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
