k8s/components/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: splitx-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: splitx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: splitx
      ports:
        - port: redis
          protocol: TCP
